--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 @layer base {
   :root {
     --background: hsl(0 0% 98%);
+    --one-list-background-image: url('/URL');
     --foreground: hsl(222.2 84% 4.9%);
     --card: hsl(0 0% 100%);
     --card-foreground: hsl(222.2 84% 4.9%);
@@ -254,4 +255,10 @@ html[data-platform=windows] ::-webkit-scrollbar-thumb {
 
 html[data-platform=windows] ::-webkit-scrollbar-thumb:hover {
   background-color: var(--scrollbar-thumb-hover)
+}
+.one-list{
+    background-image: var(--one-list-background-image);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
