--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,9 +84,9 @@
   }
 }
 
-@font-face{
-  font-family: 'Bold';
-  src:url('../../public/fonts/PorscheNext-ThinItalic.otf');
+@font-face {
+  font-family: "Bold";
+  src: url("../../public/fonts/PorscheNext-Regular.otf");
   font-weight: normal;
   font-style: normal;
 }
@@ -98,7 +98,7 @@
 
   body {
     @apply text-foreground leading-normal;
-    font-family: 'Bold';
+    font-family: "Bold";
   }
 
   img {
@@ -114,7 +114,6 @@
 
   :where(p) {
     margin-top: 1em;
-    margin-bottom: 1em;
   }
 
   /* List styles */
@@ -185,7 +184,7 @@
   pre {
     background: #0d0d0d;
     color: #fff;
-    font-family: 'Bold';
+    font-family: "Bold";
     padding: 0.75rem 1rem;
     border-radius: 0.5rem;
 
